Convince index items to wrap properly, with fixed widths

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -9,8 +9,8 @@
   width: 100%;
 }
 .index > section > div {
-  margin: 30px;
-}
-.index > section > div > ul{
-  width: 80%;
+  width: 100px;
+  margin-right: 30%;
+  margin-left: 10%;
+  margin-bottom: 10%;
 }
